commit on 'master'

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -29,11 +29,11 @@
         <header>
             <h1> WELCOME TO UNIQUE BLOG</h1>
             <p class="giving"><i> giving you the best and latest news in Nigeria</i></p>
-            <form action=" " method="get">
-                <input type="text" name='q'>
-                <button>Search</button>
-            </form>
         </header>
+        <form class="search" action=" " method="get">
+            <input type="text" name='q'>
+            <button>&#128269</button>
+        </form>
     </div>
     {% block content %}
 
