--- a/blog/static/blog/blogcss.css
+++ b/blog/static/blog/blogcss.css
@@ -101,3 +101,23 @@ h1{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: large;
 }
+.search{
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px;
+    gap: 20px;
+}
+input{
+    width: 250px;
+}
+button{
+    width: 30px;
+    background-color: lightblue;
+    border: 1px solid white;
+    border-radius: 3px;
+
+    /* box-shadow: 0px 0px 2px; */
+}
+button:hover{
+    box-shadow: 0px 0px 3px;
+}
