commit on master

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -29,10 +29,12 @@
                 </a>
             </ul>
         </nav>
-        <header>
-            <h1> WELCOME TO UNIQUE BLOG</h1>
-            <p class="giving"><i> giving you the best and latest news in Nigeria</i></p>
-        </header>
+        <div>
+            <header>
+                <h1> WELCOME TO UNIQUE BLOG</h1>
+                <p class="giving"><i> giving you the best and latest news in Nigeria</i></p>
+            </header>
+        </div>
     </div>
     {% block content %}
 
