--- a/blog/static/blog/blogcss.css
+++ b/blog/static/blog/blogcss.css
@@ -30,6 +30,8 @@ nav{
     justify-content: space-between;
     background-color: lightblue;
     padding: 10px 10px;
+    position:fixed;
+    width: 99%;
 }
 .unique{
     text-transform: uppercase;
@@ -68,9 +70,8 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 50px;
     background-color:lightblue;
-    margin-top: 10px;
 }
 h1{
     color: rgb(13, 13, 197);
@@ -109,6 +110,10 @@ button:hover{
     }
     h1{
         font-size: 35px;
+    }
+    nav{
+        display: flex;
+        flex-direction: column;
     }
 }
 @media screen and (max-width:800px) and (min-width:450px) {
