--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<a href="{% url 'Home' %}">&lAarr; Previous</a><br><br>
+<!-- <a href="{% url 'Home' %}">&lAarr; Previous</a><br><br> -->
     <h4>{{post.title}}</h4>
     <p>{{post.content}}</p>
 {% endblock content %}
