--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,8 +1,69 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
-{% block content %}
-<!-- <a href="{% url 'Home' %}">&lAarr; Previous</a><br><br> -->
-    <h4>{{post.title}}</h4>
-    <p>{{post.content}}</p>
-{% endblock content %}
-    
+<div class="post-detail-div">
+    {% block content %}
+    <!-- post detail -->
+    <div>
+        <h4 class="post-title">{{post.title}}</h4>
+        <small class="post-author">{{post.author}} | {{post.created_on}}</small>
+        <p class="post-content">{{post.content}}</p>
+    </div>
+
+    <!-- comments display -->
+    <div class="comment-container">
+
+        <div class="comment-div">
+
+            <details>
+
+                <summary>
+                    <h4>{{comments.count}} Comments</h4>
+                </summary>
+
+                <a href="{% url 'post_detail' post.slug %}">&#x21bb; comments</a>
+
+                {% for comment in comments %}
+
+                <div>
+
+                    <div class="comment-name-date">
+                        <h5 class="comment-name comment" >{{comment.name}}</h5>
+                        <small class="comment-date">{{comment.created_on}}</small>
+                    </div>
+
+                    <small class="comment">{{comment.body| linebreaks}}</small>
+
+                </div>
+
+                {% endfor %}
+
+            </details>
+
+        </div>
+
+        <div>
+            {% if new_comment %}
+            <p>Your comment is awaiting moderation</p>
+        </div>
+
+        {% else %}
+
+        <div>
+            <!-- comment form -->
+            <form action="" method="post">
+                <h4 class="comment-form-head">Leave a Comment</h4>
+                {% csrf_token %}
+                {{comment_form | crispy}}
+                <button class="comment-btn" type="submit">Submit</button>
+            </form>
+
+        </div>
+
+        {% endif %}
+
+    </div>
+
+    {% endblock content %}
+
+</div>
