--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,57 +1,70 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unique Blog</title>
-    <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
-</head>
-
-<body>
-    <style>
-        body{
-            /* background: url('../static/blog/images.jpeg') */
-        }
-    </style>
-    <div>
-        <nav>
-            <div class="unique">Unique</div>
-            <ul>
-                <a class="nav-list" href="{% url 'Home' %}">
-                    <li>Home</li>
-                </a>
-                <a class="nav-list" href="">
-                    <li>About</li>
-                </a>
-                <a class="nav-list" href="">
-                    <li>Contact</li>
-                </a>
-                <a class="nav-list" href="{% url 'admin:index' %}" target="blank">
-                    <li>Admin</li>
-                </a>
-            </ul>
-        </nav>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Unique Blog</title>
+        {% comment %}
+        <link rel="stylesheet" href="{% static 'blog/blog.css' %}"> {% endcomment %}
+        <link rel="stylesheet" href="{% static 'blog/new_style.css' %}">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    </head>
+    <body>
         <div>
-            <header>
-                <h1> WELCOME TO MY AWESOME BLOG</h1>
-               <marquee behavior="slidepointer" direction="right"> <p class="giving"><i> giving you the best and latest news in Nigeria</i></p></marquee>
-            </header>
+            <!-- Nav Bar -->
+            <nav class="navbar navbar-expand-md  bg-light navbar-light py-0 ">
+                <!-- Nav Logo-->
+                <div href="" id="logo" class="navbar-brand">Unique</div>
+                <!-- Nav Toggler-->
+                <button class="navbar-toggler"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- Nav Items/Links-->
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="{% url 'Home' %}" class="nav-link text-primary ">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link text-primary">About</a>
+                        </li>
+                        <li class="nav-item" href="">
+                            <a href="" class="nav-link text-primary">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'admin:index' %}"
+                               target="blank"
+                               class="nav-link text-primary">Admin</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div>
+                <header class="header">
+                    <h3>WELCOME TO MY AWESOME BLOG</h3>
+                    <marquee behavior="slidepointer" direction="right">
+                    <p class="sub-header">
+                        We love you as much as you do..!
+                    </p>
+                    </marquee>
+                </header>
+            </div>
+            {% block content %}
+            {% endblock content %}
+            {% block paginate %}
+            {% endblock paginate %}
+            <footer class="text-center">
+                <small>Copyright &copy; unique 2022</small>
+            </footer>
         </div>
-    </div>
-    {% block content %}
-
-    {% endblock content %}
-    
-    {% block paginate %}
-        
-    {% endblock paginate %}
-        
-    <footer>
-        <small>Copyright &copy; unique 2022</small>
-    </footer>
-</body>
-
+    </body>
 </html>
