--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,60 +1,51 @@
-{% extends 'base.html' %}
-{% block content %}
-
-<!-- Search Bar -->
-<form class="search-form" action="" method="get">
-    <input class="search-input" type="text" name='q' placeholder="Search....">
-    <button class="search-btn">&#128269</button>
-</form>
-
-<!-- Post Display -->
-<div class="blog">
-  
-    {% for post in post_list %}
-  
-    <div class="blogpost">
-  
-        <a class="blogpost" href="{% url 'post_detail' post.slug %}">
-  
-            <div>
-                <h4 class="post-title">{{post.title}}</h4>
-                <small class="post-author">{{post.author}} | {{post.created_on}} </small>
-                <!-- <p class="content">{{post.content | truncatechars:'200'}}</p> -->
-                <p class="post-content">{{post.content | truncatewords:'30'}}</p>
+{% extends "base.html" %}
+<main>
+    {% block content %}
+        <div class="side-bar ml-md-auto">
+            <button class="btn btn-warning d-lg-none"
+                    data-toggle="collapse"
+                    data-target="#search"
+                    aria-expanded="false"
+                    aria-controls="collapseExample">
+                Search
+            </button>
+            <button class="btn btn-primary d-lg-none"
+                    data-toggle="collapse"
+                    data-target="#sidebar"
+                    aria-expanded="false"
+                    aria-controls="collapseExample">
+                Popular Posts
+            </button>
+            <div id="search" class="collapse d-lg-block ">{% include 'search.html' %}</div>
+            <div id="sidebar" class="collapse d-lg-block">{% include 'sidebar.html' %}</div>
+        </div>
+        <!-- Post Display -->
+        <section class="blog-container">
+            <div class="sub-blog-container">
+                {% for post in page_obj %}
+                    <article class="blogpost">
+                        <div>
+                            <h4 class="post-title">{{ post.title }}</h4>
+                            <small class="post-author text-muted">{{ post.author }} | {{ post.created_on }}</small>
+                            <p class="post-content">
+                                {{ post.content | truncatewords:'30' }}
+                            </p>
+                            <a class="post-btn" href="{% url 'post_detail' post.slug %}">Read more &raquo;</a>
+                        </div>
+                    </article>
+                    <!-- if there is no Post or no Search Return -->
+                {% empty %}
+                    <p>
+                        <i>No Post Found</i>
+                    </p>
+                {% endfor %}
             </div>
-  
-        </a>
-  
-    </div>
-  
-    <!-- if there is no Search Return -->
-    {% empty %}
-    <p><i>No Search Result Found</i></p>
-  
-    {% endfor %}
-
-</div>
-
-{% endblock content %}
-
-<!-- pagination  -->
-{% block paginate %}
-
-<div class="paginate">
-
-    {% if is_paginated %}
-
-    <!-- Previous button pargination -->
-        {% if page_obj.has_previous %}
-            <a class="prev-btn" href="?page={{page_obj.previous_page_number}}">&laquo; PREV</a>
-        {% endif %}
-
-    <!-- Next Button pargination-->
-        {% if page_obj.has_next %}
-            <a class="next-btn" href="?page={{page_obj.next_page_number}}">NEXT &raquo;</a>
-        {% endif %}
-
-    {% endif %}
-</div>
-
-{% endblock paginate %}
+        </section>
+    {% endblock content %}
+    <!-- pagination  -->
+    {% block paginate %}
+        <div class="pagination-container ">
+            <div class="paginate">{% include 'pagination.html' %}</div>
+        </div>
+    {% endblock paginate %}
+</main>
