--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -30,7 +30,7 @@
                             <p class="post-content">
                                 {{ post.content | truncatewords:'30' }}
                             </p>
-                            <a class="post-btn" href="{% url 'post_detail' post.slug %}">Read more &raquo;</a>
+                            <a class=" btn btn-secondary" href="{% url 'post_detail' post.slug %}">Read more &raquo;</a>
                         </div>
                     </article>
                     <!-- if there is no Post or no Search Return -->
