--- a/blog/templates/search.html
+++ b/blog/templates/search.html
@@ -1,5 +1,5 @@
 <!-- Search Bar -->
 <form class="search-form " action="" method="get">
-    <input class="search-input" type="text" name='q' placeholder="Search....">
-    <button class="search-btn btn-warning">&#128269</button>
+    <input class="search-input" type="text" name='q' placeholder="Search...."/>
+    <button class="search-btn">&#128269</button>
 </form>
